down to a few errors